fixed little sneaky extra space in the tweetbox. added new padding values as well

--- a/src/Components/Screens/TweetBox.css
+++ b/src/Components/Screens/TweetBox.css
@@ -1,18 +1,12 @@
 .tweetBox {
   background-color: white;
   border-bottom: 8px solid var(--twitter-background);
-  padding-bottom: 0px;
-  padding: 30px;
+  padding: 30px 30px 15px 30px;
 }
 
 .form {
   height: 100px;
   margin: 0 auto;
-}
-
-.tweetBox {
-  display: flex;
-  padding: 20px;
 }
 
 .tweetBox-input > textarea {
